--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,18 +4,23 @@ akka {
     serializers {
           jackson-json = "akka.serialization.jackson.JacksonJsonSerializer"
     }
+    serialization-bindings {
+    "cluster.PingLogger$Ping" = jackson-json
+    }
   }
   remote {
       artery {
-          canonical.hostname = "127.0.0.1"
+          #canonical.hostname = "127.0.0.1"
+          canonical.hostname = "84.176.13.84"
           canonical.port = 0
           }
       }
 
   cluster {
-
     seed-nodes = [
       "akka://ping@127.0.0.1:25251",
       "akka://ping@127.0.0.1:25252"]
-  }
+
+    downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
+    }
 }
