--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,16 +10,17 @@ akka {
   }
   remote {
       artery {
-          #canonical.hostname = "127.0.0.1"
-          canonical.hostname = "84.176.13.84"
+      # wird überschrieben
+          canonical.hostname = "127.0.0.1"
+          #canonical.hostname = "84.176.13.84"
           canonical.port = 0
           }
       }
 
   cluster {
     seed-nodes = [
-      "akka://ping@127.0.0.1:25251",
-      "akka://ping@127.0.0.1:25252"]
+      "akka://ping@logger:25251",
+      "akka://ping@sender:25252"]
 
     downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
     }
