get port über java

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,17 +10,16 @@ akka {
   }
   remote {
       artery {
-      # wird überschrieben
+      # both will get overwritten by docker
           canonical.hostname = "127.0.0.1"
-          #canonical.hostname = "84.176.13.84"
           canonical.port = 0
           }
       }
 
   cluster {
     seed-nodes = [
-      "akka://ping@logger:25251",
-      "akka://ping@sender:25252"]
+      "akka://ping@client:25251",
+      "akka://ping@server:25252"]
 
     downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
     }
