--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,6 @@
 akka {
+  #loglevel = "DEBUG"
+
   actor {
     provider = "cluster"
     serializers {
@@ -10,17 +12,20 @@ akka {
   }
   remote {
       artery {
-      # both will get overwritten by docker
-          canonical.hostname = "127.0.0.1"
-          canonical.port = 0
+          # overwrite with java.net.InetAddress.getLocalHost.getHostName is client or server (set in docker)
+          canonical.hostname = ""
+          # docker environment variable
+          canonical.port = ${port}
+
+          # bind-hostname and bind.port is default set to the same values
           }
       }
 
   cluster {
     seed-nodes = [
+    # client, server set via docker -h
       "akka://ping@client:25251",
       "akka://ping@server:25252"]
-
     downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
     }
 }
